adds initial header style

--- a/index.html
+++ b/index.html
@@ -20,7 +20,26 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  <p>Hello world!</p>
+  <header id="header-wrapper">
+    <div id="header">
+      <a href="index.html" class="root-link">
+        <div class="avatar"></div>
+        <h1 class="title">zykadelic</h1>
+      </a>
+      <h2 class="subtitle">
+        <a href="https://twitter.com/zykadelic" target="_blank">@zykadelic</a>
+        &bull; Stockholm, SE
+      </h2>
+    </div>
+  </header>
+
+  <div id="main-wrapper">
+    <div id="main" role="main">
+      <div class="sample"></div>
+      <div class="sample"></div>
+      <div class="sample"></div>
+    </div>
+  </div>
 
   <script src="assets/javascripts/plugins/jquery-1.10.2.min.js"></script>
   <script src="assets/javascripts/plugins.js"></script>
