display profession in place of twitter handle

--- a/index.html
+++ b/index.html
@@ -25,11 +25,8 @@
       <a href="index.html" class="root-link">
         <div class="avatar"></div>
         <h1 class="title">zykadelic</h1>
+        <h2 class="subtitle">Developer &bull; Stockholm, SE</h2>
       </a>
-      <h2 class="subtitle">
-        <a href="https://twitter.com/zykadelic" target="_blank">@zykadelic</a>
-        &bull; Stockholm, SE
-      </h2>
     </div>
   </header>
 
