--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  <header id="header-wrapper">
-    <div id="header">
+  <header id="header">
+    <div class="page-wrapper">
       <a href="index.html" class="root-link">
         <div class="avatar"></div>
         <h1 class="title">zykadelic</h1>
@@ -30,8 +30,8 @@
     </div>
   </header>
 
-  <div id="main-wrapper">
-    <div id="main" role="main">
+  <div id="main" role="main">
+    <div class="page-wrapper">
       <div class="sample"></div>
       <div class="sample"></div>
       <div class="sample"></div>
