--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
     </div>
   </header>
 
+
   <div id="main" role="main">
-    <div class="page-wrapper">
+    <section class="page-wrapper">
       <div class="sample"></div>
       <div class="sample"></div>
       <div class="sample"></div>
-    </div>
+    </section>
   </div>
 
   <script src="assets/javascripts/plugins/jquery-1.10.2.min.js"></script>
