adds contact-links

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <link rel="stylesheet" href="assets/stylesheets/normalize.css">
   <link rel="stylesheet" href="assets/stylesheets/boilerplate.css">
+  <link rel="stylesheet" href="assets/stylesheets/icons.css">
   <link rel="stylesheet" href="assets/stylesheets/application.css">
   <script src="assets/javascripts/plugins/modernizr-2.6.2.min.js"></script>
 </head>
@@ -32,6 +33,18 @@
 
 
   <div id="main" role="main">
+    <nav class="contact-links">
+      <div class="page-wrapper">
+        <a href="mailto:andreas@enigma.cc" target="_blank" title="Email" class="icon email">Email</a>
+        <a href="https://twitter.com/zykadelic" target="_blank" title="Twitter" class="icon twitter">Twitter</a>
+        <a href="https://github.com/zykadelic" target="_blank" title="GitHub" class="icon github">GitHub</a>
+        <a href="http://stackoverflow.com/users/638254/zykadelic" target="_blank" title="StackOverflow" class="icon stackoverflow">StackOverflow</a>
+        <a href="http://careers.stackoverflow.com/zykadelic" target="_blank" title="Careers 2.0" class="icon careers">Careers 2.0</a>
+        <a href="https://coderwall.com/zykadelic" target="_blank" title="Coderwall" class="icon coderwall">Coderwall</a>
+        <a href="http://www.linkedin.com/in/zykadelic" target="_blank" title="LinkedIn" class="icon linkedin">LinkedIn</a>
+      </div>
+    </nav>
+    
     <section class="page-wrapper">
       <div class="sample"></div>
       <div class="sample"></div>
