removes placeholder elements

--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
     </nav>
     
     <section class="page-wrapper">
-      <div class="sample"></div>
-      <div class="sample"></div>
-      <div class="sample"></div>
+      <p>Hello!</p>
     </section>
   </div>
 
