--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
   <div id="main" role="main">
     <nav class="contact-links">
       <div class="page-wrapper">
-        <a href="mailto:andreas@enigma.cc" target="_blank" title="Email" class="icon email">Email</a>
-        <a href="https://twitter.com/zykadelic" target="_blank" title="Twitter" class="icon twitter">Twitter</a>
-        <a href="https://github.com/zykadelic" target="_blank" title="GitHub" class="icon github">GitHub</a>
-        <a href="http://stackoverflow.com/users/638254/zykadelic" target="_blank" title="StackOverflow" class="icon stackoverflow">StackOverflow</a>
-        <a href="http://careers.stackoverflow.com/zykadelic" target="_blank" title="Careers 2.0" class="icon careers">Careers 2.0</a>
-        <a href="https://coderwall.com/zykadelic" target="_blank" title="Coderwall" class="icon coderwall">Coderwall</a>
-        <a href="http://www.linkedin.com/in/zykadelic" target="_blank" title="LinkedIn" class="icon linkedin">LinkedIn</a>
+        <a href="mailto:andreas@enigma.cc" target="_blank" title="Send me an email" class="icon email">Email</a>
+        <a href="https://twitter.com/zykadelic" target="_blank" title="Tweet me" class="icon twitter">Twitter</a>
+        <a href="https://github.com/zykadelic" target="_blank" title="Read my open source projects" class="icon github">GitHub</a>
+        <a href="http://stackoverflow.com/users/638254/zykadelic" target="_blank" title="StackOverflow goodies" class="icon stackoverflow">StackOverflow</a>
+        <a href="http://careers.stackoverflow.com/zykadelic" target="_blank" title="Read my résumé" class="icon careers">Careers 2.0</a>
+        <a href="https://coderwall.com/zykadelic" target="_blank" title="View my code achievements" class="icon coderwall">Coderwall</a>
+        <a href="http://www.linkedin.com/in/zykadelic" target="_blank" title="My LinkedIn profile" class="icon linkedin">LinkedIn</a>
       </div>
     </nav>
     
