--- a/index.html
+++ b/index.html
@@ -45,8 +45,13 @@
       </div>
     </nav>
     
-    <section class="page-wrapper">
-      <p>Hello!</p>
+    <section class="bio page-wrapper">
+      <p>
+        Hello! I’m an end-to-end developer with high quality standards, a passion for the craft, and four years of professional experience.
+      </p>
+      <p>
+        The majority of my works are written in Ruby on Rails, elegantly presented using leading front end technologies such as HTML5, CSS3, and JavaScript&nbsp;/&nbsp;jQuery.
+      </p>
     </section>
   </div>
 
