adds alternative bio styling

--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
         The majority of my works are written in Ruby on Rails, elegantly presented using leading front end technologies such as HTML5, CSS3, and JavaScript&nbsp;/&nbsp;jQuery.
       </p>
     </section>
+    
+    <section class="bio2 page-wrapper">
+      <p>
+        Hello! I’m an end-to-end developer with high quality standards, a passion for the craft, and four years of professional experience.
+      </p>
+      <p>
+        The majority of my works are written in Ruby on Rails, elegantly presented using leading front end technologies such as HTML5, CSS3, and JavaScript&nbsp;/&nbsp;jQuery.
+      </p>
+    </section>
   </div>
 
   <script src="assets/javascripts/plugins/jquery-1.10.2.min.js"></script>
