--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         Hello! I’m an end-to-end developer with high quality standards, a passion for the craft, and four years of professional experience.
       </p>
       <p>
-        The majority of my works are written in Ruby on Rails, elegantly presented using leading front end technologies such as HTML5, CSS3, and JavaScript&nbsp;/&nbsp;jQuery.
+        The majority of my works are written in <em>Ruby on Rails</em>, elegantly presented using leading front end technologies such as <em>HTML5</em>, <em>CSS3</em>, and <em>JavaScript&nbsp;/&nbsp;jQuery</em>.
       </p>
     </section>
   </div>
