use real name in header

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="page-wrapper">
       <a href="index.html" class="root-link">
         <div class="avatar"></div>
-        <h1 class="title">zykadelic</h1>
+        <h1 class="title">Andreas Fransson</h1>
         <h2 class="subtitle">Developer &bull; Stockholm, SE</h2>
       </a>
     </div>
