separate page-sections and page-wrappers

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  <header id="header">
+  <header id="header" class="page-section">
     <div class="page-wrapper">
       <a href="index.html" class="root-link">
         <div class="avatar"></div>
@@ -33,7 +33,7 @@
 
 
   <div id="main" role="main">
-    <nav class="contact-links">
+    <nav class="contact-links page-section">
       <div class="page-wrapper">
         <a href="mailto:andreas@enigma.cc" target="_blank" title="Send me an email" class="icon email">Email</a>
         <a href="https://twitter.com/zykadelic" target="_blank" title="Tweet me" class="icon twitter">Twitter</a>
@@ -45,7 +45,7 @@
       </div>
     </nav>
     
-    <section class="bio page-wrapper">
+    <section class="bio page-section page-wrapper">
       <p>
         Hello! I’m an end-to-end developer with high quality standards, a passion for the craft, and four years of professional experience.
       </p>
