use id for section namings

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
   <div id="main" role="main">
-    <nav class="contact-links page-section">
+    <nav id="contact-section" class="page-section">
       <div class="page-wrapper">
         <a href="mailto:andreas@enigma.cc" target="_blank" title="Send me an email" class="icon email">Email</a>
         <a href="https://twitter.com/zykadelic" target="_blank" title="Tweet me" class="icon twitter">Twitter</a>
@@ -45,7 +45,7 @@
       </div>
     </nav>
     
-    <section class="bio page-section page-wrapper">
+    <section id="bio-section" class="page-section page-wrapper">
       <p>
         Hello! I’m an end-to-end developer with high quality standards, a passion for the craft, and four years of professional experience.
       </p>
