adds first version of timeline

--- a/index.html
+++ b/index.html
@@ -53,6 +53,71 @@
         The majority of my works are written in <em>Ruby on Rails</em>, elegantly presented using leading front end technologies such as <em>HTML5</em>, <em>CSS3</em>, and <em>JavaScript&nbsp;/&nbsp;jQuery</em>.
       </p>
     </section>
+
+    <hr>
+
+    <section id="timeline-section" class="page-section">
+      <div class="page-wrapper">
+        <h1 class="section-title">Timeline</h1>
+        <div class="clr"></div>
+
+        <ol class="timeline-list">
+          <li class="timeline-item present">
+            <h1 class="title">Developer @&nbsp;ProActive&nbsp;Health&nbsp;Partner</h1>
+            <h2 class="subtitle">Nov 2013 - Present <span class="split"></span> Stockholm</h2>
+            <p class="description">
+              Lead front end developer within the core team of the company's two web services. End to end development.
+            </p>
+          </li>
+
+          <li class="timeline-item">
+            <h1 class="title">Developer @&nbsp;Monkeydancers</h1>
+            <h2 class="subtitle">Jun 2012 - Nov 2013 <span class="split"></span> Stockholm</h2>
+            <p class="description">
+              Developing back end with Ruby on Rails and front end with HTML5, CSS3 and JavaScript/jQuery. Titled internally as their “front end ninja”, I’m working a lot with context-based and modularized CSS. Other tasks such as project management, product development, application design, and some graphical design have also made their appearances.
+            </p>
+          </li>
+
+          <li class="timeline-item">
+            <h1 class="title">Developer @&nbsp;Qubator</h1>
+            <h2 class="subtitle">Jun 2011 - Jun 2012 <span class="split"></span> Stockholm</h2>
+            <p class="description">
+              After the internship within The Company P, the development team of the company migrated to Qubator. This coincided with my high school graduation, and Qubator quickly decided to take me in to their core team as a full-time developer.
+            </p>
+            <p class="description">
+              My main areas have been front end development (HTML5, CSS3, JavaScript/jQuery) and back end development (Ruby on Rails and digging deeper down the Rails framework), though further interaction design, application design, project management and working with clients have been common.
+            </p>
+          </li>
+
+          <li class="timeline-item">
+            <h1 class="title">Developer&nbsp;internship @&nbsp;The&nbsp;Company&nbsp;P</h1>
+            <h2 class="subtitle">Mar 2011 - Jun 2011 <span class="split"></span> Stockholm</h2>
+            <p class="description">
+              My third year of high school also included a 10 week internship. The teacher of the web development class I was in recommended The Company P to take me in as an intern.
+            </p>
+            <p class="description">
+              With the focus of learning Ruby and Ruby on Rails, I also learned many other aspects of being a professional developer, such as agile development, project management, working with a client, SCRUM methodologies, object oriented programming, RESTful programming, application design, interaction design, version control systems (Git and Subversion) and deploying with Heroku.
+            </p>
+          </li>
+
+          <li class="timeline-item">
+            <h1 class="title">Web&nbsp;Developer @&nbsp;Mozoomi</h1>
+            <h2 class="subtitle">Jun 2010 - Jun 2011 <span class="split"></span> Stockholm</h2>
+            <p class="description">
+              My then recent internship led me to a part-time employment here, in parallel with school. While hired as a front end developer of their product website, working with XHTML, CSS and jQuery, I have also written some of the back end code, in PHP, and produced some of the graphics.
+            </p>
+          </li>
+
+          <li class="timeline-item">
+            <h1 class="title">Web&nbsp;Developer&nbsp;internship @&nbsp;Mozoomi</h1>
+            <h2 class="subtitle">Mar 2010 - Jun 2010 <span class="split"></span> Stockholm</h2>
+            <p class="description">
+              My second year of high school included a 10 week internship. Me and three classmates met up with Mozoomi and we started working together. My main responsibility was the front end development of their product website, working with XHTML, CSS and jQuery.
+            </p>
+          </li>
+        </ol>
+      </div>
+    </section>
   </div>
 
   <script src="assets/javascripts/plugins/jquery-1.10.2.min.js"></script>
