--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
       </div>
     </nav>
     
-    <article id="bio-section" class="page-section page-wrapper">
+    <section id="bio-section" class="page-section page-wrapper">
       <p>
         Hello! I’m an end-to-end developer with high quality standards, a passion for the craft, and four years of professional experience.
       </p>
       <p>
         The majority of my works are written in <em>Ruby on Rails</em>, elegantly presented using leading front end technologies such as <em>HTML5</em>, <em>CSS3</em>, and <em>JavaScript&nbsp;/&nbsp;jQuery</em>.
       </p>
-    </article>
+    </section>
 
     <hr>
 
