now safe to use absolute paths

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="assets/stylesheets/normalize.css">
-  <link rel="stylesheet" href="assets/stylesheets/boilerplate.css">
-  <link rel="stylesheet" href="assets/stylesheets/icons.css">
-  <link rel="stylesheet" href="assets/stylesheets/application.css">
-  <script src="assets/javascripts/plugins/modernizr-2.6.2.min.js"></script>
+  <link rel="stylesheet" href="/assets/stylesheets/normalize.css">
+  <link rel="stylesheet" href="/assets/stylesheets/boilerplate.css">
+  <link rel="stylesheet" href="/assets/stylesheets/icons.css">
+  <link rel="stylesheet" href="/assets/stylesheets/application.css">
+  <script src="/assets/javascripts/plugins/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
   <!--[if lt IE 9]>
@@ -25,7 +25,7 @@
 
   <header id="header" class="page-section">
     <div class="page-wrapper">
-      <a href="index.html" class="root-link">
+      <a href="/" class="root-link">
         <div class="avatar"></div>
         <h1 class="title">Andreas Fransson</h1>
         <h2 class="subtitle">Developer &bull; Stockholm, SE</h2>
@@ -92,9 +92,9 @@
     </section>
   </div>
 
-  <script src="assets/javascripts/plugins/jquery-1.10.2.min.js"></script>
-  <script src="assets/javascripts/plugins.js"></script>
-  <script src="assets/javascripts/script.js"></script>
+  <script src="/assets/javascripts/plugins/jquery-1.10.2.min.js"></script>
+  <script src="/assets/javascripts/plugins.js"></script>
+  <script src="/assets/javascripts/script.js"></script>
 
   <!-- Google Analytics -->
   <script>
