--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
   <div id="main" role="main">
     <nav id="contact-section" class="page-section">
       <div class="page-wrapper">
-        <a href="mailto:{{ site.data.contact.email }}" target="_blank" title="Send me an email" class="icon email">Email</a>
-        <a href="{{ site.data.contact.twitter }}" target="_blank" title="Tweet me" class="icon twitter">Twitter</a>
-        <a href="{{ site.data.contact.github }}" target="_blank" title="Read my open source projects" class="icon github">GitHub</a>
-        <a href="{{ site.data.contact.careers }}" target="_blank" title="Read my résumé" class="icon careers">Careers 2.0</a>
-        <a href="{{ site.data.contact.stackoverflow }}" target="_blank" title="StackOverflow goodies" class="icon stackoverflow">StackOverflow</a>
-        <a href="{{ site.data.contact.coderwall }}" target="_blank" title="View my code achievements" class="icon coderwall">Coderwall</a>
-        <a href="{{ site.data.contact.linkedin }}" target="_blank" title="My LinkedIn profile" class="icon linkedin">LinkedIn</a>
+        <a href="mailto:{{ site.data.contact.email }}" target="_blank" title="Send me an email" class="icon icon--email">Email</a>
+        <a href="{{ site.data.contact.twitter }}" target="_blank" title="Tweet me" class="icon icon--twitter">Twitter</a>
+        <a href="{{ site.data.contact.github }}" target="_blank" title="Read my open source projects" class="icon icon--github">GitHub</a>
+        <a href="{{ site.data.contact.careers }}" target="_blank" title="Read my résumé" class="icon icon--careers">Careers 2.0</a>
+        <a href="{{ site.data.contact.stackoverflow }}" target="_blank" title="StackOverflow goodies" class="icon icon--stackoverflow">StackOverflow</a>
+        <a href="{{ site.data.contact.coderwall }}" target="_blank" title="View my code achievements" class="icon icon--coderwall">Coderwall</a>
+        <a href="{{ site.data.contact.linkedin }}" target="_blank" title="My LinkedIn profile" class="icon icon--linkedin">LinkedIn</a>
       </div>
     </nav>
     
