use ndash between dates

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </h1>
 
           <h2 class="timeline-item-subtitle">
-            {{ item.start_date | date: '%b %Y' }} -
+            {{ item.start_date | date: '%b %Y' }} &ndash;
             {% if item.end_date %}
               {{ item.end_date | date: '%b %Y' }}
             {% else %}
