full copy update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <section class="pageSection">
   <div class="contentWrapper">
-    <h1 class="sectionTitle">Timeline</h1>
+    <h1 class="sectionTitle">History</h1>
     <ol class="timeline">
       {% for item in site.data.timeline reversed %}
         <li class="timeline-item {% unless item.end_date %}present{% endunless %}">
